--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,19 +3,20 @@ alembic==1.13.*
 Authlib==1.3.0
 fastapi==0.111.*
 httpx==0.27.*
-ipython==8.24.0
+ipython==8.26.0
 itsdangerous==2.2.0
 Jinja2==3.1.*
 asyncpg==0.29.*
-pytest==8.2.*
+pytest==8.3.*
 requests==2.32.*
 SQLAlchemy==2.0.*
-uvicorn==0.29.*
-bcrypt==4.1.*
+uvicorn==0.30.*
+bcrypt==4.2.*
 sqlalchemy-utils==0.41.*
 python-multipart==0.0.*
-pyjwt==2.8.*
+pyjwt==2.9.*
 python-dateutil==2.9.*
-pydantic-settings==2.2.*
-pydantic[email]==2.7.*
+pydantic-settings==2.4.*
+pydantic[email]==2.8.*
+# Installation of newer version might fail under Windows
 lxml==4.9.3
